Se crea archivo mostrar ejecutivo

--- a/BancoWeb/BancoWeb.csproj
+++ b/BancoWeb/BancoWeb.csproj
@@ -95,6 +95,7 @@
     <Content Include="LoginEjecutivo.aspx" />
     <Content Include="MostrarClientes.aspx" />
     <Content Include="Mostrar_Cliente.aspx" />
+    <Content Include="Mostrar_Ejecutivo.aspx" />
     <Content Include="Transferir.aspx" />
     <Content Include="VerCuentaySaldo.aspx" />
     <Content Include="VerMensajesC.aspx" />
@@ -150,6 +151,13 @@
     </Compile>
     <Compile Include="Mostrar_Cliente.aspx.designer.cs">
       <DependentUpon>Mostrar_Cliente.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Mostrar_Ejecutivo.aspx.cs">
+      <DependentUpon>Mostrar_Ejecutivo.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Mostrar_Ejecutivo.aspx.designer.cs">
+      <DependentUpon>Mostrar_Ejecutivo.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SitioCliente.Master.cs">
